--- a/src/main/resources/CalculatorView.fxml
+++ b/src/main/resources/CalculatorView.fxml
@@ -1,107 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controls.CalculatorFXMLController">
+<AnchorPane prefHeight="580.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controls.CalculatorController">
+   <fx:define>
+      <Font fx:id="FONT" size ="28"/>
+      <Font fx:id="OPERATORS_FONT" size ="28" name="System Bold"/>
+   </fx:define>
    <children>
       <Label fx:id="ResultLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="10.0" layoutY="56.0" prefHeight="81.0" prefWidth="380.0" style="-fx-background-color: lightgray;" text="0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Button fx:id="ButtonComa" layoutX="33.0" layoutY="489.0" mnemonicParsing="false" onAction="#handleComaButton" prefHeight="70.0" prefWidth="70.0" text=".">
-         <font>
-            <Font name="System Bold" size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button0" layoutX="114.0" layoutY="489.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="0">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button1" layoutX="32.0" layoutY="400.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="1">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button2" layoutX="113.0" layoutY="400.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="2">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button3" layoutX="194.0" layoutY="400.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="3">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button4" layoutX="32.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="4">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button5" layoutX="113.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="5">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button6" layoutX="194.0" layoutY="320.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="6">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button7" layoutX="32.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="7">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button8" layoutX="113.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="8">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="Button9" layoutX="194.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="9">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="ButtonEquals" layoutX="257.0" layoutY="509.0" mnemonicParsing="false" onAction="#handleEqualButton" prefHeight="60.0" prefWidth="124.0" text="=">
-         <font>
-            <Font name="System Bold" size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="ButtonDivide" layoutX="319.0" layoutY="442.0" mnemonicParsing="false" onAction="#handleOperationButton" prefHeight="60.0" prefWidth="60.0" text="/">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="ButtonMultiply" layoutX="319.0" layoutY="375.0" mnemonicParsing="false" onAction="#handleOperationButton" prefHeight="60.0" prefWidth="60.0" text="*">
-         <font>
-            <Font name="System Bold" size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="ButtonMinus" layoutX="319.0" layoutY="308.0" mnemonicParsing="false" onAction="#handleOperationButton" prefHeight="60.0" prefWidth="60.0" text="-">
-         <font>
-            <Font name="System Bold" size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="ButtonPlus" layoutX="319.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleOperationButton" prefHeight="60.0" prefWidth="60.0" text="+">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
-      <Button fx:id="ButtonCancel" layoutX="319.0" layoutY="148.0" mnemonicParsing="false" onAction="#handleCButton" prefHeight="60.0" prefWidth="60.0" text="C">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Button>
       <Label fx:id="EquationLabel" layoutX="18.0" layoutY="14.0" prefHeight="46.0" prefWidth="368.0" style="-fx-background-color: lightgray;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <VBox alignment="CENTER" layoutX="9.0" layoutY="219.0" prefHeight="350.0" prefWidth="270.0" spacing="10.0">
+         <children>
+            <HBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="7" font="$FONT"/>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="8" font="$FONT"/>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="9" font="$FONT"/>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="4" font="$FONT"/>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="5" font="$FONT"/>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="6" font="$FONT"/>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="1" font="$FONT"/>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="2" font="$FONT"/>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="3" font="$FONT"/>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <Button onAction="#handleComaButton" prefHeight="70.0" prefWidth="70.0" text="." font="$FONT"/>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="0" font="$FONT"/>
+                  <Button onAction="#handleNumberButton" prefHeight="70.0" prefWidth="70.0" text="000">
+                     <font>
+                        <Font size="22.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <VBox alignment="CENTER_RIGHT" layoutX="281.0" layoutY="150.0" prefHeight="424.0" prefWidth="100.0" spacing="10.0">
+
+         <children>
+            <Button onAction="#handleCButton" prefHeight="60.0" prefWidth="60.0" text="C" font="$FONT"/>
+            <Button onAction="#handleOperationButton" prefHeight="60.0" prefWidth="60.0" text="-" font="$OPERATORS_FONT"/>
+            <Button onAction="#handleOperationButton" prefHeight="60.0" prefWidth="60.0" text="+" font="$OPERATORS_FONT"/>
+            <Button onAction="#handleOperationButton" prefHeight="60.0" prefWidth="60.0" text="*" font="$OPERATORS_FONT"/>
+            <Button onAction="#handleOperationButton" prefHeight="60.0" prefWidth="60.0" text="/" font="$OPERATORS_FONT"/>
+            <Button onAction="#handleEqualButton" prefHeight="60.0" prefWidth="124.0" text="=" font="$OPERATORS_FONT"/>
+         </children>
+      </VBox>
    </children>
    <opaqueInsets>
       <Insets />
